--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -15,11 +15,8 @@
     color: white;
 }
 
-/* .c-navbar {
-    padding: 0;
-}
 
-.c-navbar__img {
+/* .c-navbar__img {
     margin-right: 0;
 }
 
@@ -32,4 +29,4 @@
     font-size: 20px;
     margin-top: auto;
     letter-spacing: 1px;
-} */
+}  */
